--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# Copy this file to ~/.tmux.conf
+# Use this file as your ~/.tmux.conf
 
 # enable mouse support for switching panes/windows
 setw -g mouse on
